# Meal-Planner-SaaS

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.local.md  CLAUDE.md  Makefile  PROMPT_OPTIMISE.md  README.md  ROADMAP.md  docker-compose.dev.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  railway.toml  roadmap-mealplanner.html
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260412_1200_0001_initial_schema.py  20260412_1500_0003_pdf_idempotence_columns.py  20260412_1800_0004_ingredients_off_mapping.py  20260412_1900_0005_weekly_planner_indexes.py  20260414_1000_0006_add_subscription_stripe_columns.py  20260414_1100_0007_engagement_events_rls.py  20260415_1000_0008_user_imported_recipes.py  20260415_1400_0009_add_recipe_course_column.py  20260416_1100_0011_favorites_unique_constraint.py  20260416_drive_provider_household.py
apps/api/src/: __init__.py  main.py
apps/api/src/api/v1/: admin.py  billing.py  book.py  feedbacks.py  fridge.py  health.py  households.py  ingredients.py  plans.py  recipes.py  router.py  webhooks.py
apps/api/src/core/: __init__.py  cache.py  celery_sender.py  config.py  logging.py  rate_limit.py  security.py  stripe_config.py  subscription.py
apps/api/src/db/: README.md  __init__.py  base.py  session.py
apps/api/src/db/models/: __init__.py  feedback.py  household.py  planning.py  recipe.py  subscription.py
apps/api/src/scripts/: __init__.py  seed.py
apps/api/tests/: __init__.py  conftest.py  test_health.py  test_rate_limit.py
apps/api/tests/api/v1/: test_feedbacks.py  test_households.py  test_plans.py  test_recipes.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/: __init__.py  app.py
apps/worker/src/agents/: __init__.py
apps/worker/src/agents/book_generator/: README.md  __init__.py  agent.py  pdf_renderer.py  storage.py  tasks.py  template_engine.py
apps/worker/src/agents/recipe_scout/: README.md  __init__.py  agent.py  dedup.py  embedder.py  normalizer.py  off_mapper.py  tagger.py  tasks.py  url_importer.py  validator.py
apps/worker/src/agents/retention_loop/: __init__.py  agent.py  tasks.py
apps/worker/src/agents/taste_profile/: README.md  __init__.py  agent.py  tasks.py
apps/worker/src/agents/weekly_planner/: README.md  __init__.py  agent.py  constraint_builder.py  plan_selector.py  recipe_retriever.py  shopping_list_builder.py  tasks.py
apps/worker/src/scripts/: __init__.py  backfill_embeddings.py  cleanup_low_quality.py  import_edamam_recipes.py  import_quality_recipes.py  import_sample_recipes.py  import_spoonacular.py  map_off_ingredients.py  nightly_import.py  pipeline_report.py  run_pipeline.py  run_scout_manual.py  sample_recipes.json  scrape_750g.py  scrape_marmiton.py  translate_recipes.py
apps/worker/tests/: __init__.py  conftest.py  test_dedup.py  test_embedder.py  test_marmiton_scraper.py  test_normalizer.py
apps/worker/tests/agents/: __init__.py
(+295 files in other folders)
