[project]
name = "mealplanner-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  # FIX #1 (review Phase 1 2026-04-12) : dépendance vers le package DB partagé
  # Permet au worker d'accéder aux modèles SQLAlchemy sans dépendre directement de apps/api
  # NOTA devops-engineer : ajouter packages/db dans [tool.uv.workspace] members du pyproject.toml racine
  "mealplanner-db",
  "celery[redis]>=5.4",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "loguru>=0.7",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "pgvector>=0.3",
  "httpx>=0.27",
  "tenacity>=8.3",
  "scrapy>=2.11",
  # Swap Anthropic → Gemini (2026-04-12) : free tier 15 req/min suffisant pour batch nocturne
  "google-genai>=1.0",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "python-slugify>=8.0",
  # Phase 2 — Génération PDF livres de recettes (BOOK_GENERATOR)
  "weasyprint>=60.0",
  # Phase 2 — Stockage objet MinIO/R2 (upload PDFs générés)
  "boto3>=1.34",
  # Phase 2 — Templates HTML pour BOOK_GENERATOR
  "jinja2>=3.1",
]

[project.optional-dependencies]
# sentence-transformers + playwright en optionnel (PyTorch = +2.5GB, dépasse limite Railway 4GB)
# Installer via : uv pip install 'mealplanner-worker[ml]'
ml = [
  "sentence-transformers>=3.0",
  "playwright>=1.44",
]
anthropic = [
  "anthropic>=0.34",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "faker>=25",
  "responses>=0.25",
]

[tool.uv.sources]
mealplanner-db = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
